--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -5,4 +5,5 @@ github_repos:
   - benjimaclellan/queso
   - benjimaclellan/aesop
   - graphiq-dev/graphiq
-  - benjimaclellan/foqal
+  - OpenQuantumDesign/equilux
+  - OpenQuantumDesign/oqd-core
